# ChangeLog for dev-lang/ruby
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lang/ruby/ChangeLog,v 1.340 2008/07/15 18:07:15 graaff Exp $

  24 Sep 2008; Alex Legler <gentoo@a3li.info>
  +files/ruby-1.9.0.4-rubygems-proxy.patch, ruby-1.9.0.4.ebuild,
  ruby-1.9.0.4-r1.ebuild:
  Adding fix for bug #238061

  21 Sep 2008; Alex Legler <gentoo@a3li.info> +ruby-1.9.0.4-r1.ebuild:
  Adding ebuild with rake stripped

  11 Sep 2008; Alex Legler <gentoo@a3li.info> -ruby-1.9.0.2.ebuild:
  Purging old version

  11 Sep 2008; Alex Legler <gentoo@a3li.info> ruby-1.9.0.4.ebuild:
  Now using the 3rdpartymirrors, see bug #237392

  09 Sep 2008; Alex Legler <gentoo@a3li.info> ruby-1.9.0.4.ebuild:
  Ruby 1.9.0.4 ebuild now uses and mentions and depends on eselect-ruby
  instead of ruby-config

  05 Sep 2008; Alex Legler <gentoo@a3li.info>
  +files/ruby-1.9.0.4-entity_expansion_limit.diff, ruby-1.9.0.4.ebuild:
  Added fix for rexml vulnerability (bug #236060; CVE-2008-3790)

  30 Aug 2008; Hans de Graaff <graaff@gentoo.org> ChangeLog:
  Add ebuild for ruby 1.9.0.4 based on work in bug 203706

  30 Aug 2008; Hans de Graaff <graaff@gentoo.org> ChangeLog:
  Drop 1.8.* versions that are (or were) in the official tree already.

  23 Jul 2008; Sven Schwyn <schwyn@bitcetera.com> ruby-1.9.0.2.ebuild:
  New ebuild from #203706 thanks to Senuma Takahiko and Mark Somerville.

*ruby-1.9.0.2 (23 Jul 2008)

  15 Jul 2008; Hans de Graaff <graaff@gentoo.org> ruby-1.8.6_p230.ebuild:
  Drop cjk support since the most recent oniguruma patches no longer apply to
  this version, #230111.

  29 Jun 2008; Hans de Graaff <graaff@gentoo.org>
  +files/ruby-1.8.6-revert-r15856.patch, +ruby-1.8.6_p230.ebuild:
  Try to fix the security issues reported in #225465 for ruby 1.8.6.
  Unfortunately the official p230 has a change which causes segmentation faults
  for applications like Rails and RSpec, so we are reverting that specific
  change.
